--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/styles/base";
+@import "./assets/styles/typography";
+// @import "./assets/styles/icon";
+@import "./assets/styles/bootstrap";
+
+@import "./assets/styles/variables";
