--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,82 @@
-<p>header works!</p>
+<header class="header">
+    <div class="header-top">
+        <div class="container-excl py-3">
+            <div class="con_inner d-flex justify-content-between">
+                <div class="d-flex justify-content-start align-items-center">
+                    <a href="/" class="logo">
+                        <!-- <img class="logo-img" src="../../../assets/img/logo/logo.jpg" alt="logo"> -->
+                        <span class="logo-text me-4">آنلاین شاپ</span>
+                    </a>
+                </div>
+                <div class="header-search mx-4 input-group">
+                    <input type="text" class="form-control ui-input ui-input--right-placeholder" placeholder="جستجو" value="">
+                    <span class="input-group-text pe-0"> 
+                        <i class="icon icon-search"></i> 
+                    </span> 
+                </div>
+                <div class="d-flex justify-content-end align-items-center">
+                    <a href="/" class="bttn btn-icon ms-3">
+                        <i class="icon icon-user"></i>
+                    </a>
+
+                    <a href="/" class="bttn btn-icon btn-login-register">
+                        <span id="cart_number" class="cart_number"><span>1</span></span>
+                        <span class="mx-3">سبد خرید</span>
+                        <i class="icon icon-order"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header-bot">
+        <div class="container-excl py-3">
+            <div class="con_inner d-flex justify-content-between align-items-center">
+                <nav class="header-navbar d-flex justify-content-start align-items-center">
+                    <div class="d-flex justify-content-start align-items-center">
+                        <i></i>
+                        <span>محصولات</span>
+                    </div>
+                    <div>
+                        <ul class="d-flex justify-content-start align-items-center">
+                            <li class="mx-3">
+                                <a href="/">
+                                    <i></i>
+                                    <span>خانه</span>
+                                </a>
+                            </li>
+                            <li class="mx-3">
+                                <a href="/">
+                                    <i></i>
+                                    <span>برند ها</span>
+                                </a>
+                            </li>
+                            <li class="mx-3">
+                                <a href="/">
+                                    <i></i>
+                                    <span>فروش ویژه</span>
+                                </a>
+                            </li>
+                            <li class="mx-3">
+                                <a href="/">
+                                    <i></i>
+                                    <span>وبلاگ</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+
+                <div class="d-flex justify-content-start align-items-center">
+                    <ul class="d-flex">
+                        <li class="mx-3">
+                            <a href="/">
+                                <i></i>
+                                <span>تماس با ما</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
