--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,35 +1,31 @@
 // Colors
-$primary-green: #4FB555;
-$primary-light-blue: #00bfd6;
-$icon-black-color: #424242;
-$primary-black-1: #474747;
-$primary-black-2: #656565;
-$primary-red: #ef394e;
-$primary-border-color: #e6e6e6;
-$auth-bg: #EBECF7;
-$border-color: #BBBBBB;
+$primary-blue: #007580;
+$primary-light-blue: #029FAE;
+$primary-red: #F05C52;
 
-$maincolor: #494E7D;
-$darkblue : #080F4D;
-$darkgray : #333333;
+$icon-color: #272343;
+
 $gray666 : #666666;
-$blueskyfont : #198CFF;
-$primaryblue : $maincolor;
-$anotherblue: #616EE5;
-$grayborder : #e7e7e7;
-$primaryred : #E84747;
 $graybbb : #bbbbbb;
-$primaryGreen : #039A00;
-$light-blue: #CBD0FF;
-$oromo-color: #494E7D;
+
+$dark-gray : #636270;
+$light-gray: #9A9CAA;
+$text-blue: #272343;
+
+$primary-bg: #F0F2F3;
+$main-bg: #ffffff;
+$white-bg: #ffffff;
+$primary-border : #e6e6e6;
 
 // etc
-$primary-radius: 16px;
+$primary-radius: 10px;
 $primary-padding: 20px;
 
 $shadowPrimary-1: 0 2px 4px 0 srgba(0, 0, 0, .1);
 $shadowPrimary-2: 0 12px 12px 0 hsla(0, 0%, 71%, .1);
 
+
+// icons
 $icomoon-font-family: "icomoon";
 $icomoon-font-path: "./fonts/icomoon";
 
@@ -48,7 +44,6 @@ $icon-wallet: "\e90b";
 $icon-refresh: "\e90c";
 $icon-like: "\e90d";
 $icon-dislike: "\e90e";
-$icon-card: "\e90f";
 $icon-receipt-text: "\e910";
 $icon-edit: "\e911";
 $icon-info-circle: "\e912";
@@ -71,5 +66,7 @@ $icon-arrow-circle-left: "\e922";
 $icon-arrow-circle-right: "\e923";
 $icon-bag: "\e924";
 $icon-arrow-down: "\e925";
-$icon-user: "\e926";
+$icon-user: "\62";
 $icon-search: "\e927";
+$icon-order: "\64";
+$icon-search: "\65";
