--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,9 @@
 <div dir="rtl" class="container-fluid h-100">
-  <div class="row flex-nowrap h-100">
-    <div class="h-100">
-      <div class="row no-gutters flex-column h-100">
-        <div class="col-auto">
-          <app-header></app-header>
-        </div>
-        <main class="col">
-          <router-outlet></router-outlet>
-        </main>
-        <div class="col-auto">
-          <app-footer></app-footer>
-        </div>
-        
-      </div>
-    </div>
+  <div class="h-100">
+    <app-header></app-header>
+    <main class="main">
+      <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
   </div>
 </div>
