--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,84 @@
+@import "../../../assets/styles/variables";
+
 .header{
-    background-color: red;
+    background-color: $primary-bg;
+}
+
+.logo{
+  
+    .logo-img{
+        width: 100px;
+        object-fit: cover;
+    }
+
+    .logo-text{
+        color: $text-blue;
+        font-size: 18px;
+    }
+}
+.header-search{
+    position: relative;
+    input{
+        font-family: "IranSansWeb", sans-serif;
+        width: 454px;
+        display: flex;
+        align-items: center;
+        padding: 12px 24px 12px 50px;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        text-align: center;
+        white-space: nowrap;
+        border: 1px solid $primary-border;
+        border-radius: $primary-radius;
+        direction: rtl;
+        text-align: right;
+    }
+
+    .input-group-text{
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 30px;
+        text-align: center;
+        position: absolute;
+        top: 0px;
+        left: 15px;
+    }
+}
+
+.btn-login-register{
+    .cart_number{
+        background-color: $primary-light-blue;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+
+        span{
+            padding-top: 2px;
+            color: #fff;
+        }
+    }
+}
+
+.header-bot{
+    background-color: $main-bg;
+}
+
+@media (max-width : 990px) {
+    .header-search input{
+        width: 300px;
+    }
+}
+
+@media (max-width : 768px) {
+    .header-search{
+       display: none;
+    }
 }
