--- a/src/assets/styles/_icon.scss
+++ b/src/assets/styles/_icon.scss
@@ -1,10 +1,12 @@
+@import "./variables";
+
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src: url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?nyfsos');
-  src: url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?nyfsos#iefix') format('embedded-opentype'),
-  url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?nyfsos') format('truetype'),
-  url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?nyfsos') format('woff'),
-  url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?nyfsos##{$icomoon-font-family}') format('svg');
+  src: url('../#{$icomoon-font-path}/#{$icomoon-font-family}.eot?nyfsos');
+  src: url('../#{$icomoon-font-path}/#{$icomoon-font-family}.eot?nyfsos#iefix') format('embedded-opentype'),
+  url('../#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?nyfsos') format('truetype'),
+  url('../#{$icomoon-font-path}/#{$icomoon-font-family}.woff?nyfsos') format('woff'),
+  url('../#{$icomoon-font-path}/#{$icomoon-font-family}.svg?nyfsos##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -42,7 +44,7 @@
 
 .icon-purple {
   &::before {
-    color: $maincolor !important;
+    color: $icon-color !important;
   }
 }
 
@@ -59,35 +61,35 @@
 .icon-call-ringing {
   &:before {
     content: $icon-call-ringing;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-question {
   &:before {
     content: $icon-question;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-caution {
   &:before {
     content: $icon-caution;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-security {
   &:before {
     content: $icon-security;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-hammer {
   &:before {
     content: $icon-hammer;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
@@ -136,14 +138,14 @@
 .icon-wallet {
   &:before {
     content: $icon-wallet;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-refresh {
   &:before {
     content: $icon-refresh;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
@@ -161,52 +163,45 @@
   }
 }
 
-.icon-card {
-  &:before {
-    content: $icon-card;
-    color: $maincolor;
-  }
-}
-
 .icon-receipt-text {
   &:before {
     content: $icon-receipt-text;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-edit {
   &:before {
     content: $icon-edit;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-info-circle {
   &:before {
     content: $icon-info-circle;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-calendar {
   &:before {
     content: $icon-calendar;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-truck-fast {
   &:before {
     content: $icon-truck-fast;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
 .icon-location {
   &:before {
     content: $icon-location;
-    color: $maincolor;
+    color: $icon-color;
   }
 }
 
@@ -322,16 +317,17 @@
   }
 }
 
-.icon-user {
-  &:before {
-    content: $icon-user;
-    color: #666;
-  }
+.icon-order:before {
+  content: $icon-order;
+  color: $icon-color;
 }
 
-.icon-search {
-  &:before {
-    content: $icon-search;
-    color: #bbb;
-  }
+.icon-search:before {
+  content: $icon-search;
+  color: $icon-color;
+}
+
+.icon-user:before {
+  content: $icon-user;
+  color: $icon-color;
 }
