--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -4,8 +4,8 @@
   font-family: "IranSansWeb";
   font-style: normal;
   font-weight: normal;
-  src: url("./fonts/iranSans/IRANSansWeb-Regular.woff") format("woff"),
-    url("./fonts/iranSans/IRANSansWeb-Regular.woff2") format("woff2");
+  src: url("../fonts/iranSans/IRANSansWeb-Regular.woff") format("woff"),
+    url("../fonts/iranSans/IRANSansWeb-Regular.woff2") format("woff2");
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -13,8 +13,8 @@
   font-family: "IranSansBold";
   font-style: normal;
   font-weight: normal;
-  src: url("./fonts/iranSans/IRANSansWeb-Bold.woff") format("woff"),
-    url("./fonts/iranSans/IRANSansWeb-Bold.woff2") format("woff2");
+  src: url("../fonts/iranSans/IRANSansWeb-Bold.woff") format("woff"),
+    url("../fonts/iranSans/IRANSansWeb-Bold.woff2") format("woff2");
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -22,8 +22,8 @@
   font-family: "IranSansLight";
   font-style: normal;
   font-weight: normal;
-  src: url("./fonts/iranSans/IRANSansWeb-Light.woff") format("woff"),
-    url("./fonts/iranSans/IRANSansWeb-Light.woff2") format("woff2");
+  src: url("../fonts/iranSans/IRANSansWeb-Light.woff") format("woff"),
+    url("../fonts/iranSans/IRANSansWeb-Light.woff2") format("woff2");
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -31,8 +31,8 @@
   font-family: "IranSansUltraLight";
   font-style: normal;
   font-weight: normal;
-  src: url("./fonts/iranSans/IRANSansWeb-UltraLight.woff") format("woff"),
-    url("./fonts/iranSans/IRANSansWeb-UltraLight.woff2") format("woff2");
+  src: url("../fonts/iranSans/IRANSansWeb-UltraLight.woff") format("woff"),
+    url("../fonts/iranSans/IRANSansWeb-UltraLight.woff2") format("woff2");
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -40,7 +40,7 @@
   font-family: "IranSansMedium";
   font-style: normal;
   font-weight: normal;
-  src: url("./fonts/iranSans/IRANSansWeb-Medium.woff") format("woff"),
-    url("./fonts/iranSans/IRANSansWeb-Medium.woff2") format("woff2");
+  src: url("../fonts/iranSans/IRANSansWeb-Medium.woff") format("woff"),
+    url("../fonts/iranSans/IRANSansWeb-Medium.woff2") format("woff2");
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
